--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <header>
     <!-- Que aqui al presionar vaya a la pagina principal de la pagina -->
     <h1><a href="index.html">NumCore</a></h1>
+      <nav>
+      <ul>
+        <li><a href="#bibliografia">Bibliografía</a></li>
+            <li><a href="Integracion.html">Integración</a></li>
+            <li><a href="diferenciacion.html">Diferenciación</a></li>
+      </ul>
+    </nav>
+  </header>
   </header>
   <main>
     <section id="casos">
