--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- Que aqui al presionar vaya a la pagina principal de la pagina -->
     <h1><a href="index.html">NumCore</a></h1>
       <nav>
-      <ul>
-        <li><a href="Integracion.html">Integración</a></li>
+      <ul class="menu">
         <li><a href="diferenciacion.html">Diferenciación</a></li>
+        <li><a href="Integracion.html">Integración</a></li>
         <li><a href="#bibliografia">Bibliografía</a></li>
       </ul>
     </nav>
