--- a/CasoDiferenciacion.html
+++ b/CasoDiferenciacion.html
@@ -108,7 +108,7 @@
       <section id="metodos">
         <div class="metodo">
           <h2>Algoritmo</h2>
-            <button class="boton"><a href="">Presioname</a></button>
+            <button class="boton"><a href="https://www.programiz.com/online-compiler/9XK9nr1XaQnNS">Presioname</a></button>
         </div>
         <div class="metodo">
           <h2>Infografía</h2>
