--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   </header>
   </header>
   <main>
+    <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE
+      <img src="imagenes/indicacion.png" alt="indicacion">
+    </p>
     <section id="casos">
       <h2>Metodos Numéricos</h2>
       <p>Los métodos numéricos son procedimientos matemáticos cuyo objetivo es la resolución numérica de problemas que carecen de expresión analítica para su resolución exacta. 
