--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   </header>
   </header>
   <main>
-    <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE
-      <img src="imagenes/indicacion.png" alt="indicacion">
-    </p>
+
     <section id="casos">
       <h2>Metodos Numéricos</h2>
       <p>Los métodos numéricos son procedimientos matemáticos cuyo objetivo es la resolución numérica de problemas que carecen de expresión analítica para su resolución exacta. 
@@ -81,7 +79,11 @@
         <li>Chapra, S. C., & Canale, R. P. (2010). <em>Métodos Numéricos para Ingenieros</em>. McGraw-Hill.</li>
         <li>Burden, R. L., & Faires, J. D. (2011). <em>Análisis numérico</em>. Cengage Learning.</li>
       </ul>
+      <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE</p>
+      <img src="imagenes/indicacion.png" alt="indicacion">
+    
     </section>
+
   </main>
 </body>
 </html>
