--- a/index.html
+++ b/index.html
@@ -79,11 +79,9 @@
         <li>Chapra, S. C., & Canale, R. P. (2010). <em>Métodos Numéricos para Ingenieros</em>. McGraw-Hill.</li>
         <li>Burden, R. L., & Faires, J. D. (2011). <em>Análisis numérico</em>. Cengage Learning.</li>
       </ul>
-      <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE</p>
-      <img src="imagenes/indicacion.png" alt="indicacion">
-    
     </section>
-
+      <img class="indicacion" src="imagenes/indicacion.png" alt="indicacion">
+      <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE</p>
   </main>
 </body>
 </html>
