--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
       <ul>
         <li>Chapra, S. C., & Canale, R. P. (2010). <em>Métodos Numéricos para Ingenieros</em>. McGraw-Hill.</li>
         <li>Burden, R. L., & Faires, J. D. (2011). <em>Análisis numérico</em>. Cengage Learning.</li>
+        <li>Chapra, S. C., & Canale, R. P. (2007). <em>Métodos numéricos para ingenieros</em> (5ª ed., trad. J. Enríquez Brito). McGraw-Hill/Interamericana Editores.</li>
+        <li>Ingeniería Química Reviews. (2020, octubre 4). Métodos numéricos.</li>
+        <li>DefinicionWiki. (s. f.). Definición de diferenciación numérica + Ejemplos ¿Qué es? Autores.</li>
+        <li>SPOL. (s. f.). Diferenciación numérica. Blog de Análisis Numérico.</li>
       </ul>
     </section>
       <img class="indicacion" src="imagenes/indicacion.png" alt="indicacion">
