--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </ul>
     </section>
       <img class="indicacion" src="imagenes/indicacion.png" alt="indicacion">
-      <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE</p>
+      <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE O PARA INGRESAR A LOS CASOS DE ESTUDIOS PRESIONAS EN ALGUNA PARTE DE CONSIDERACIONES</p>
   </main>
 </body>
 </html>
