--- a/Infografia Int.html
+++ b/Infografia Int.html
@@ -16,4 +16,4 @@
     }
     
   </style>
-<img src="imagenes/InfografiaInt.jpg" alt="Infografia">
+<img src="imagenes/InfografiaInt.png" alt="Infografia">
