--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       </ul>
     </section>
       <img class="indicacion" src="imagenes/indicacion.png" alt="indicacion">
-      <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE O PARA INGRESAR A LOS METODOS PRESIONAS EN CONSIDERACIONES</p>
+      <p>NOTA: SI QUIERES REGRESAR A LA PAGINA PRINCIPAL SOLAMENTE PRESIONAR EN EL NOMBRE MAS GRANDE O PARA INGRESAR A LOS METODOS PRESIONAS EN CONSIDERACIONES, TE RECOMENDAMOS ENTRAR EN PC
+      </p>
   </main>
 </body>
 </html>
