--- a/CasoDiferenciacion.html
+++ b/CasoDiferenciacion.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1 class="titulo"><a href="Pagina principal.html">Caso Estudio Diferenciacion</a></h1>
+    <h1 class="titulo"><a href="index.html">Caso Estudio Diferenciacion</a></h1>
     <nav>
       <ul class="menu">
             <li><a href="#casos">Estudios de Caso</a></li>
