--- a/Integracion.html
+++ b/Integracion.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="cabecera">
-    <h1 class="titulo"><a href="Pagina principal.html">Integración Numérica</a></h1>
+    <h1 class="titulo"><a href="index.html">Integración Numérica</a></h1>
     <nav>
       <ul class="menu">
         <li><a href="#estudio-caso">Estudio de Caso</a></li>
