--- a/diferenciacion.html
+++ b/diferenciacion.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1 class="header"><a href="Pagina principal.html">Diferenciación Numérica</a></h1>
+    <h1 class="header"><a href="index.html">Diferenciación Numérica</a></h1>
     <nav>
       <ul class="menu">
         <li><a href="#Estudio">Estudio de Caso</a></li>
