--- a/Casointegracion.html
+++ b/Casointegracion.html
@@ -11,9 +11,7 @@
     <h1 class="titulo"><a href="index.html">Caso Estudio Integración</a></h1>
     <nav>
       <ul class="menu">
-            <li><a href="#casos">Estudios de Caso</a></li>
-            <li><a href="#comparacion">Comparación</a></li>
-            <li><a href="#bibliografia">Bibliografía</a></li>
+            <li><a href="#metodos">Entregables</a></li>
       </ul>
     </nav>
   </header>
