--- a/Casointegracion.html
+++ b/Casointegracion.html
@@ -11,7 +11,7 @@
     <h1 class="titulo"><a href="index.html">Caso Estudio Integración</a></h1>
     <nav>
       <ul class="menu">
-            <li><a href="#metodos">Entregables</a></li>
+            <li><a href="#Entregables">Entregables</a></li>
       </ul>
     </nav>
   </header>
@@ -97,6 +97,7 @@
       <p>El método de Simpson 3/8 compuesto requiere que el número de subintervalos sea múltiplo de tres, lo cual puede ser una ligera restricción en ciertos casos.</p>
       </div>
 
+      <section id="Entregables">
       <section id="metodos">
         <div class="metodo">
           <h2>Algoritmo</h2>
@@ -110,6 +111,7 @@
           <h2>Video</h2>
             <button class="boton"><a href="https://youtu.be/XDxWvLg1cOU?feature=shared">Presioname</a></button>
         </div>
+      </section>
       </section>
 </body>
 </html>
