--- a/diferenciacion.html
+++ b/diferenciacion.html
@@ -12,7 +12,7 @@
     <h1 class="header"><a href="index.html">Diferenciación Numérica</a></h1>
     <nav>
       <ul class="menu">
-        <li><a href="#Estudio">Estudio de Caso</a></li>
+        <li><a href="#estudio-caso">Estudio de Caso</a></li>
         <li><a href="#ejemplos">Ejemplo Paso a Paso</a></li>
         <li><a href="#consideraciones">Analisis</a></li>
       </ul>
@@ -101,7 +101,7 @@
         podemos observar que en la diferenciación central maneja índices de estimaciones más precisas que las diferenciaciones AD y AT
       </p>
     </section>
-      <section class="estudio-caso" >
+      <section id="estudio-caso" >
         <button class="boton" ><a href="CasoDiferenciacion.html">Estudio de caso </a></button>
       </section>
   </main>   
